[package]
name = "basket-options-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
pyth-benchmark-rs = "0.1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
futures-util = "0.3.31"
bytes = "1.10.1"
chrono = "0.4"
ndarray = "0.17.2"
ndarray-linalg = { version = "0.18.1", features = ["openblas-static"] }
rand = "0.10.1"
rand_distr = "0.6.0"
statrs = "0.18.0"
